Fixed button misalignment

--- a/imports/ui/stylesheets/body.less
+++ b/imports/ui/stylesheets/body.less
@@ -6,8 +6,15 @@ p, span, a {
   text-decoration: none !important;
 }
 
-// 代码块
-pre {
-  background-color: rgb(240, 242, 245);
-  padding: 15px;
+.package-description {
+  // 图片
+  img {
+    width: 100% !important;
+  }
+  // 代码块
+  pre {
+    background-color: rgb(240, 242, 245);
+    padding: 15px;
+  }
 }
+
